RESOLVED FIXED 240547
Audit token for font sandbox extension is sometimes wrong
https://bugs.webkit.org/show_bug.cgi?id=240547
Summary Audit token for font sandbox extension is sometimes wrong
Per Arne Vollan
Reported 2022-05-17 16:03:35 PDT
Audit token for font sandbox extension is sometimes wrong. We must get the audit token from the correct WebProcessProxy.
Attachments
Per Arne Vollan
Comment 1 2022-05-17 16:08:02 PDT
EWS
Comment 2 2022-05-18 13:40:07 PDT
Committed r294428 (250710@main): <https://commits.webkit.org/250710@main> Reviewed commits have been landed. Closing PR #702 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-05-18 13:41:14 PDT
Note You need to log in before you can comment on or make changes to this bug.