Audit token for font sandbox extension is sometimes wrong https://bugs.webkit.org/show_bug.cgi?id=240547

Reviewed by Chris Dumez.

Audit token for font sandbox extension is sometimes wrong. We must get the audit token from the correct WebProcessProxy.

(WebKit::WebPageProxy::switchFromStaticFontRegistryToUserFontRegistry):
(WebKit::WebPageProxy::fontdMachExtensionHandle): Deleted.
* Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::fontdMachExtensionHandle):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.h:

Canonical link: https://commits.webkit.org/250710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294428 268f45cc-cd09-0410-ab3c-d52691b4dbfc